--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-<title> Intellipaat 2020 March Deops </title>
+<title> Intellipaat </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
-<h2> Capstone Project by Babalola Omodolapo Victor</h2>
 </body>
 </html>
